Added documentation and fixed issues

--- a/homework2/addPerson.html
+++ b/homework2/addPerson.html
@@ -17,6 +17,7 @@
     <form action="/people" method="POST">
         First Name: <input class="ui-widget" id="fname" name="fname"><br>
         Last Name: <input class="ui-widget" id="lname" name="lname"><br>
+        Start: <input class="ui-widget" id="start" name="start"><br>
         <input type="submit" value="Submit" class="ui-button ui-widget">
     </form>
     
